	* configs/mikroe-stm32f4/: Updated configuration for the
	  Mikroe STM32F4 board from Ken Pettit (2013-10-27).
	* arch/arm/src/stm32/stm32_spi.c:  DMA-related fixes from Ken
	  Pettit (2013-10-27).
	* sched/sched_releasetcb.c: Fix a cornercase:  If sched_releasetcb()
	  is called as part of a failed pthread startup before the flags
	  field in the TCB has been initialized, then a crash occurs.
	  Pointed out by David Sidrane (2013-10-27)
	* arch/arm/src/sama5/sam_adc.c:  ADC now works in all implemented
	  modes:  single channel or multiple channel with sequencer support.
	  software trigger or timer trigger;  ADC channel interrupts or
	  DMA (2013-10-28).
	* nuttx/drivers/audio/vs1053.c and nuttx/include/nuttx/audio/audio.h:
	  Add logic to verify the audio sub-format.  From Ken Pettit (2013-10-28).

6.32 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* configs/spark:  Spark configuration updated by David Sidrane
	  (2013-10-30).
	* drivers/wireless/cc3000 and include/nuttx/wireless/cc3000:
	  CC3000 driver updates from David Sidrane (2013-10-13).
	* arch/arm/src/sama5/chip/sam_ssc.h:  SSC register definition
	  header file (2013-10-30).
	* arch/arm/src/sama5/chip/sam_pwm.h:  PWM register definition
	  header file (2013-10-31).
	* drivers/mtd/mtd_partition.c: Fix erase block vs page block confusion.
	  From Ken Pettit (2013-10-31).
	* arch/arm/src/stm32/stm32_usbdev.c: On a failure to bind the class
	  driver, the driver reference was being nullified too soon.  This
	  caused an exception in usbdev_reset() later.  The driver reference
	  will be nullified later usbdev_unregister when the caller gets the
	  error.  From David Sidrane (2013-10-31).
	* drivers/mtd_config.c and include/nuttx/configdata.h:  Add a container
	  for an MTD device that can be used to provide a simple, lightweight
	  interface to configation data storage that resides on some storage
	  media that is wrapped as an MTD device.  From Ken Pettit (2013-11-1).