@@ -59,6 +59,12 @@
 #  include <apps/usbmonitor.h>
 #endif
 
+#ifdef CONFIG_MIKROE_FLASH_CONFIG_PART
+#ifdef CONFIG_PLATFORM_CONFIGDATA
+#  include <nuttx/configdata.h>
+#endif
+#endif
+
 #ifdef CONFIG_STM32_OTGFS
 #  include "stm32_usbhost.h"
 #endif
@@ -227,6 +233,7 @@ int nsh_archinitialize(void)
         partno = 0;
         ptr = partstring;
         partoffset = 0;
+
         while (*ptr != '\0')
           {
             /* Get the partition size */
@@ -235,12 +242,27 @@ int nsh_archinitialize(void)
             mtd_part = mtd_partition(mtd, partoffset, (partsize>>2)*16);
             partoffset += (partsize >> 2) * 16;
 
-            /* Now initialize a SMART Flash block device and bind it to the MTD device */
+#ifdef CONFIG_MIKROE_FLASH_CONFIG_PART
+            /* Test if this is the config partition */
+
+            if (CONFIG_MIKROE_FLASH_CONFIG_PART_NUMBER == partno)
+              {
+                /* Register the partition as the config device */
+
+                mtdconfig_register(mtd_part);
+              }
+            else
+#endif
+              {
+                /* Now initialize a SMART Flash block device and bind it
+                 * to the MTD device.
+                 */
 
 #if defined(CONFIG_MTD_SMART) && defined(CONFIG_FS_SMARTFS)
-            sprintf(partname, "p%d", partno);
-            smart_initialize(CONFIG_MIKROE_FLASH_MINOR, mtd_part, partname);
+                sprintf(partname, "p%d", partno);
+                smart_initialize(CONFIG_MIKROE_FLASH_MINOR, mtd_part, partname);
 #endif
+              }
 
             /* Update the pointer to point to the next size in the list */
 
@@ -258,7 +280,6 @@ int nsh_archinitialize(void)
 
             partno++;
           }
-      }
 #else /* CONFIG_MIKROE_FLASH_PART */
 
         /* Configure the device with no partition support */
@@ -266,20 +287,21 @@ int nsh_archinitialize(void)
         smart_initialize(CONFIG_MIKROE_FLASH_MINOR, mtd, NULL);
 
 #endif /* CONFIG_MIKROE_FLASH_PART */
+      }
     }
 
   /* Create a RAM MTD device if configured */
 
 #if defined(CONFIG_RAMMTD) && defined(CONFIG_MIKROE_RAMMTD)
   {
-      uint8_t *start = (uint8_t *) kmalloc(CONFIG_MIKROE_RAMMTD_SIZE * 1024);
-      mtd = rammtd_initialize(start, CONFIG_MIKROE_RAMMTD_SIZE * 1024);
-      mtd->ioctl(mtd, MTDIOC_BULKERASE, 0);
+    uint8_t *start = (uint8_t *) kmalloc(CONFIG_MIKROE_RAMMTD_SIZE * 1024);
+    mtd = rammtd_initialize(start, CONFIG_MIKROE_RAMMTD_SIZE * 1024);
+    mtd->ioctl(mtd, MTDIOC_BULKERASE, 0);
 
-      /* Now initialize a SMART Flash block device and bind it to the MTD device */
+    /* Now initialize a SMART Flash block device and bind it to the MTD device */
 
 #if defined(CONFIG_MTD_SMART) && defined(CONFIG_FS_SMARTFS)
-      smart_initialize(CONFIG_MIKROE_RAMMTD_MINOR, mtd, NULL);
+    smart_initialize(CONFIG_MIKROE_RAMMTD_MINOR, mtd, NULL);
 #endif
   }
 
@@ -308,7 +330,6 @@ int nsh_archinitialize(void)
   else
     {
       message("nsh_archinitialize: Successfully bound SPI to the MMC/SD driver\n");
-
     }
 #endif
 
